crates/diagnosis/src/snapshots/diagnosis__tests__emit_report_single_line_no_color.snap
---
source: crates/diagnosis/src/lib.rs
expression: report.emit_to_string().unwrap()
---
error: expected semicolon
> test.mu:1
| 
| let x = 10_
| 

